<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".06" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:weightSum="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:textAlignment="center"
            android:text="@string/alarms"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:background="@android:color/transparent" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/overspeed"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switch_overspeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textOff="OFF"
            android:backgroundTint="#e71f1f"
            android:textOn="ON"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/accalarm"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switch_acc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textOff="OFF"
            android:textOn="ON"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/lowbattery"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switch_lowbattery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textOff="OFF"
            android:textOn="ON"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/powercutoff"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switch_powercutoff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textOff="OFF"
            android:textOn="ON"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".11"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/geofence"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <Switch
            android:id="@+id/switch_geofence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textOff="OFF"
            android:textOn="ON"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".08"
        android:orientation="horizontal"
        android:weightSum="1">



        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:background="@color/NewBARcolor"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"/>


    </LinearLayout>
</LinearLayout>