<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tagloginnew"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15" >

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".43">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_weight=".5"
                android:background="@drawable/newlogo" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".47" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_userpswd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".0"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:backgroundTint="#e71f1f"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".02"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:backgroundTint="#e71f1f"
            android:maxLines="1"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".0"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_checks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">
        <!--<TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />-->
        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center|start"
            android:text="Remember Me"
            android:buttonTint="#e71f1f"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chkShowPswd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:gravity="center|start"
            android:buttonTint="#e71f1f"
            android:text="@string/showpswd"
            android:textSize="12sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight=".08"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:background="@drawable/buttonbgwhite"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".35" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight=".3"
            android:background="@drawable/esanimage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".35" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".02"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

        <TextView
            android:layout_width="0dp"
            android:text="Copyright © SAN Solution India Pvt Ltd"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="10sp"
            android:layout_weight=".9" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1" />

    </LinearLayout>
</LinearLayout>
